# src/routes/auth.routes.ts
@@ -8,5 +8,6 @@ router.post('/register', authController.register);
 router.post('/check', authCheck, authController.authCheck);
 router.post('/forgot-password', authController.forgotPassword);
 router.post('/reset-password', authCheck, authController.resetPassword);
+router.post('/change-password', authCheck, authController.changePassword);
 
 export default router;
