# src/types/auth.dto.ts
@@ -11,7 +11,13 @@ export type RegisterDTO = Pick<
 export type LoginDTO = Pick<User, 'email' | 'password'>;
 
 export type ForgotPasswordDTO = Pick<User, 'email'>;
+
 export type resetPasswordDTO = {
   oldPassword: string;
   newPassword: string;
+};
+export type changePasswordDTO = {
+  oldPassword: string;
+  newPassword: string;
+  confirmPassword: string;
 };
