# src/utils/schemas/saved.validator.ts
@@ -1,0 +1,6 @@
+import Joi from 'joi';
+import { savedUnsaved } from '../../types/saved.dto';
+
+export const SavedUnsaved = Joi.object<savedUnsaved>({
+  threadId: Joi.string().uuid(),
+});
