# swagger/swagger-output.json
@@ -142,6 +142,40 @@
         }
       }
     },
+    "/auth/change-password": {
+      "post": {
+        "description": "",
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "404": {
+            "description": "Not Found"
+          }
+        },
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ],
+        "requestBody": {
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/changePasswordDTO"
+              }
+            }
+          }
+        }
+      }
+    },
     "/users/": {
       "get": {
         "description": "",
@@ -245,10 +279,18 @@
           "200": {
             "description": "OK"
           },
+          "401": {
+            "description": "Unauthorized"
+          },
           "404": {
             "description": "Not Found"
           }
-        }
+        },
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ]
       },
       "delete": {
         "description": "",
@@ -392,6 +434,81 @@
             "bearerAuth": []
           }
         ]
+      },
+      "delete": {
+        "description": "",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "404": {
+            "description": "Not Found"
+          }
+        },
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ]
+      },
+      "patch": {
+        "description": "",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "403": {
+            "description": "Forbidden"
+          },
+          "404": {
+            "description": "Not Found"
+          }
+        },
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ],
+        "requestBody": {
+          "required": true,
+          "description": "Edit Thread",
+          "content": {
+            "multipart/form-data": {
+              "schema": {
+                "$ref": "#/components/schemas/EditThreadDTO"
+              }
+            }
+          }
+        }
       }
     },
     "/likes/": {
@@ -493,6 +610,9 @@
           "200": {
             "description": "OK"
           },
+          "201": {
+            "description": "Created"
+          },
           "401": {
             "description": "Unauthorized"
           }
@@ -508,6 +628,66 @@
             "application/json": {
               "schema": {
                 "$ref": "#/components/schemas/followUnfollowDTO"
+              }
+            }
+          }
+        }
+      },
+      "get": {
+        "description": "",
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "404": {
+            "description": "Not Found"
+          }
+        },
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ]
+      }
+    },
+    "/saved/": {
+      "get": {
+        "description": "",
+        "responses": {
+          "401": {
+            "description": "Unauthorized"
+          }
+        },
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ]
+      },
+      "post": {
+        "description": "",
+        "responses": {
+          "201": {
+            "description": "Created"
+          },
+          "401": {
+            "description": "Unauthorized"
+          }
+        },
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ],
+        "requestBody": {
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/SavedUnsaveDTO"
               }
             }
           }
@@ -579,6 +759,23 @@
           }
         }
       },
+      "changePasswordDTO": {
+        "type": "object",
+        "properties": {
+          "oldPassword": {
+            "type": "string",
+            "example": "example123"
+          },
+          "newPassword": {
+            "type": "string",
+            "example": "321elpmaxe"
+          },
+          "confirmPassword": {
+            "type": "string",
+            "example": "321elpmaxe"
+          }
+        }
+      },
       "CreateThreadDTO": {
         "type": "object",
         "properties": {
@@ -587,8 +784,19 @@
             "example": "Lorem Ipsum Bla Bla Bla..."
           },
           "images": {
-            "type": "file",
-            "example": "hanya image/png image/jpeg image/jpg"
+            "type": "file"
+          }
+        }
+      },
+      "EditThreadDTO": {
+        "type": "object",
+        "properties": {
+          "content": {
+            "type": "string",
+            "example": "Lorem Ipsum Bla Bla Bla..."
+          },
+          "images": {
+            "type": "file"
           }
         }
       },
@@ -639,6 +847,15 @@
           "content": {
             "type": "string",
             "example": "Test Reply Gan"
+          }
+        }
+      },
+      "SavedUnsaveDTO": {
+        "type": "object",
+        "properties": {
+          "threadId": {
+            "type": "string",
+            "example": "5673aada-2ee0-4318-9d61-bf9b840c686f"
           }
         }
       }
